--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,9 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
-    }
+        "xutility": "cpp",
+        "deque": "cpp",
+        "stack": "cpp"
+    },
+    "cmake.configureOnOpen": true
 }
